implemented API call for city temperature

--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
   </head>
   <body>
     <section>
+        <h1>Current temperature: <span id="cityCurrentTemperature">20</span></h1>
+        <form id="selectCity">
+          <input id="currentCity" type="text" placeholder="Enter a city" />
+          <input type="submit" />
+        </form>
+    </section>
+    <!-- <section>
+      <h1>Current temperature: <span id="current-temperature"></span></h1>
+      <form id="select-city">
+        <input id="current-city" type="text" placeholder="Enter a city"></input>
+        <input type="submit"></input>
+      </form>
+    </section> -->
+    <section>
       <h1 id="thermostatCurrentTemperature"><h1>
         <p>
           <button id="thermostatIncrease">+</button>
           <button id="thermostatDecrease">-</button>
-          <button id="thermostatReset">reset</button>
+          <button id="thermostatReset">Reset</button>
           <button id="thermostatTogglePowerSave"></button>
         </p>
     </section>
