page now shows current city name alongside temperature

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <section>
-        <h1>Current temperature: <span id="cityCurrentTemperature">20</span></h1>
+        <h1><span id="userCity"></span>'s current temperature: <span id="cityCurrentTemperature">20</span></h1>
         <form id="selectCity">
           <input id="currentCity" type="text" placeholder="Enter a city" />
           <input type="submit" />
