--- a/index.html
+++ b/index.html
@@ -2,33 +2,40 @@
 <html>
   <head>
     <title>Thermostat</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
   <body>
-    <section>
-        <h1><span id="userCity"></span>'s current temperature: <span id="cityCurrentTemperature">20</span></h1>
-        <form id="selectCity">
-          <input id="currentCity" type="text" placeholder="Enter a city" />
-          <input type="submit" />
-        </form>
-    </section>
-    <!-- <section>
-      <h1>Current temperature: <span id="current-temperature"></span></h1>
-      <form id="select-city">
-        <input id="current-city" type="text" placeholder="Enter a city"></input>
-        <input type="submit"></input>
-      </form>
-    </section> -->
-    <section>
-      <h1 id="thermostatCurrentTemperature"><h1>
-        <p>
-          <button id="thermostatIncrease">+</button>
-          <button id="thermostatDecrease">-</button>
-          <button id="thermostatReset">Reset</button>
-          <button id="thermostatTogglePowerSave"></button>
-        </p>
-    </section>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-3 border border-dark rounded">
+          <section>
+              <h5><span id="userCity"></span>'s current temperature: <span id="cityCurrentTemperature">20</span></h5>
+              <form id="selectCity">
+                <input class="form-control-sm" id="currentCity" type="text" placeholder="Enter a city" />
+                <input type="submit" class="btn btn-dark btn-sm"/>
+              </form>
+          </section>
+        </div>
+
+        <div class="btn-group btn-sm" role="group" aria-label="Thermostat controls">
+          <section>
+            <h1 class="display-4">Current temperature: <span id="thermostatCurrentTemperature"></span></h1>
+              <p>
+                <button type="button" id="thermostatIncrease" class="btn btn-dark btn-sm">+</button>
+                <button type="button" id="thermostatDecrease" class="btn btn-dark btn-sm">-</button>
+                <button type="button" id="thermostatReset" class="btn btn-dark btn-sm">Reset</button>
+                <button type="button" id="thermostatTogglePowerSave" class="btn btn-dark btn-sm"></button>
+              </p>
+          </section>
+        </div>
+      </div>
+    </div>
+
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="src/thermostat.js"></script>
     <script src="js/interface.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
